--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-immutable": "^4.0.0",
     "styled-components": "^5.0.1"
